# carlosnoronha.tech-exchange-bot

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: config.py  database.py  models.py
app/worker/: scheduler.py
app/worker/repositories/: exchange_rate.py
app/worker/services/: email.py  exchange_api.py
tests/: conftest.py
tests/core/: test_config.py  test_database.py  test_models.py
tests/worker/: test_scheduler.py
tests/worker/repositories/: test_exchange_rate_repository.py
tests/worker/services/: test_email_service.py  test_exchange_api_service.py
