[project]
name = "exchange-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "beanie>=1.26.0,<2.0.0",
    "motor>=3.4.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]
testpaths = ["tests"]

[tool.ruff]
src = ["app"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "G",   # flake8-logging-format (lazy % in logging)
    "UP",  # pyupgrade
]
